fix(core): modernize Android APIs and eliminate deprecation and signer warnings
- Migrate Bluetooth GATT connection to BluetoothGattConnectionSettings and direct writeCharacteristic/writeDescriptor APIs
- Migrate telephony listener to TelephonyCallback and standardize call accept/reject on AudioManager media key events
- Modernize Android 13+ edge-to-edge system bars controller and OnBackInvokedDispatcher
- Replace deprecated URL constructors with URI.create().toURL()
- Pass -J-enable-native-access=ALL-UNNAMED to apksigner to silence restricted Conscrypt method warnings during APK signing

Signed-off-by: Deepak5310 <37282143+Deepak5310@users.noreply.github.com>